@@ -26,6 +26,8 @@ Small features:
     calling hwloc-ps
   * New function starpu_get_pu_os_index() to convert logical index of a PU to
     its OS index.
+  * New function starpu_get_hwloc_topology() to get a copy of the hwloc
+    topology used by StarPU.
 
 StarPU 1.3.5 (git revision 5f7458799f548026fab357b18541bb462dde2b53)
 ====================================================================
